fixed alignment of usernames in header of chat menu

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,13 @@ body{
   }
 }
 
+@media (max-width : 639px) {
+  .glass-sidebar{
+    border-radius: 0;
+  }
+}
+
+
 .apear{
   animation: emerge 1s ease-in-out;
 }
